# Traffic-Lights-Detection

./: CMakeLists.txt  README.md  config.hpp
include/: accuracy.hpp  core_fun.hpp  feature.hpp  lights_detect.hpp  lights_judge.hpp  lights_locate.hpp  lights_recognize.hpp  svm_train.hpp  test.hpp  util.hpp
src/: core_fun.cpp  feature.cpp  lights_detect.cpp  lights_judge.cpp  lights_locate.cpp  lights_recognize.cpp  test.cpp
test/: main.cpp
train/: svm_train.cpp
util/: util.cpp
